# rustowl

./: .gitignore  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  default.nix  deny.toml
.cargo/: config.toml
.github/workflows/: build.yaml  checks.yml  ci.yml  docker-checks.yml
.helix/: languages.toml
benches/: comprehensive.rs  rustowl_bench_simple.rs
benches/perf-tests/: Cargo.toml
benches/perf-tests/src/: lib.rs
editors/: README.md
editors/emacs/: rustowl.el
editors/helix/: README.md  config.toml  languages.toml
editors/neovim/: test.sh
editors/vscode/: .vscodeignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
editors/vscode/src/: bootstrap.ts  extension.ts
installation/: README.md
installation/aur/: PKGBUILD  PKGBUILD-BIN  PKGBUILD-GIT
installation/docker/: Dockerfile
installation/nix/: default.nix
installation/source/: README.md  install.sh
owl-test/: Cargo.toml
owl-test/src/: lib.rs
owl-test/tests/: combined_tests.rs
scripts/: security.sh
src/: cache.rs  cli.rs  lib.rs  lsp_decoration.rs  lsp_progress.rs  lsp_server.rs  lsp_workspace.rs  main.rs  mir_analysis.rs  mir_cache.rs  mir_polonius.rs  mir_transform.rs  models.rs  range_ops.rs  rustc_wrapper.rs  shells.rs  test_framework.rs  text_conversion.rs  toolchain.rs  utils.rs
src/compiler/: analyze.rs  cache.rs  mod.rs
src/compiler/analyze/: polonius_analyzer.rs  transform.rs
src/lsp/: analyze.rs  backend.rs  decoration.rs
src/test_framework/: lsp_client.rs  runner.rs
tests/: call_tests.rs  combined_tests.rs  copy_tests.rs  imm_borrow_tests.rs  lifetime_tests.rs  lsp_code_actions.rs  move_tests.rs  mut_borrow_tests.rs
