[package]
authors = [
  "cordx56 <cordx56@cordx.cx>",
  "wvhulle <willemvanhulle@protonmail.com>",
]
categories = ["development-tools", "visualization"]
description = "Visualize Ownership and Lifetimes in Rust"
edition = "2024"
keywords = ["lifetime", "lsp", "ownership", "visualization"]
license = "MPL-2.0"
name = "rustowl"
readme = "README.md"
repository = "https://github.com/wvhulle/rustowl"
version = "0.0.1"

[package.metadata.rust-analyzer]
rustc_private = true


[[bench]]
harness = false
name = "comprehensive"

[dependencies]
cargo_metadata = "0.23"
clap = { version = "4", features = ["cargo", "derive"] }
clap_complete = "4"
clap_complete_nushell = "4"
clap_mangen = "0.2"
log = "0.4"
process_alive = "0.2"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple_logger = { version = "5", features = ["stderr"] }
tokio = { version = "1", features = [
  "fs",
  "io-std",
  "io-util",
  "macros",
  "process",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-util = "0.7"
tower-lsp = "0.20"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_complete_nushell = "4"
clap_mangen = "0.2"
regex = "1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemalloc-sys = "0.6"
tikv-jemallocator = "0.6"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "debuginfo"

[profile.release.package."*"]
opt-level = 3
strip = "symbols"

[profile.arm-windows-release]
inherits = "release"
lto = "off"

[profile.security]
debug = true
debug-assertions = true
inherits = "release"
opt-level = 1
overflow-checks = true
strip = "none"
