[package]
authors = [
  "cordx56 <cordx56@cordx.cx>",
  "wvhulle <willemvanhulle@protonmail.com>",
]
categories = ["development-tools", "visualization"]
description = "Visualize Ownership and Lifetimes in Rust"
edition = "2024"
keywords = ["lifetime", "lsp", "ownership", "visualization"]
license = "MPL-2.0"
name = "rustowl"
readme = "README.md"
repository = "https://github.com/wvhulle/rustowl"
version = "0.0.1"

[package.metadata.rust-analyzer]
rustc_private = true


[[bench]]
harness = false
name = "comprehensive"

[dependencies]
cargo_metadata = "0.23"
clap = { version = "4", features = ["cargo", "derive"] }
log = "0.4"
process_alive = "0.2"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple_logger = { version = "5", features = ["stderr"] }
tokio = { version = "1", features = [
  "fs",
  "io-std",
  "io-util",
  "macros",
  "process",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-util = "0.7"
tower-lsp = "0.20"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[build-dependencies]
regex = "1"


[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "debuginfo"

[profile.release.package."*"]
opt-level = 3
strip = "symbols"

[profile.arm-windows-release]
inherits = "release"
lto = "off"

[profile.security]
debug = true
debug-assertions = true
inherits = "release"
opt-level = 1
overflow-checks = true
strip = "none"


[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html
complexity = { level = "warn", priority = -1 }
pedantic = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }

absolute_paths = "deny"
allow_attributes_without_reason = "deny"
branches_sharing_code = "deny"
collapsible_else_if = "deny"
collapsible_if = "deny"
explicit_counter_loop = "deny"
explicit_iter_loop = "deny"
filter_map_next = "deny"
flat_map_identity = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
impl_trait_in_params = "allow"
manual_clamp = "deny"
manual_filter_map = "deny"
manual_find = "deny"
manual_map = "deny"
manual_ok_or = "deny"
missing_panics_doc = "allow"
needless_raw_string_hashes = "allow"
struct_excessive_bools = "allow"
# manual_saturating_arithmetic = "deny"
manual_unwrap_or = "deny"
manual_while_let_some = "deny"
map_err_ignore = "deny"
map_flatten = "deny"
map_unwrap_or = "deny"
match_bool = "deny"
missing_assert_message = "deny"
missing_const_for_fn = "deny"
# mod_module_files = "deny"
# module_name_repetitions = "deny"
multiple_inherent_impl = "deny"
mut_mut = "deny"
# mutex_atomic = "deny"
needless_bool = "deny"
needless_bool_assign = "deny"
needless_collect = "deny"
needless_continue = "deny"
needless_range_loop = "deny"
option_if_let_else = "deny"
option_map_or_none = "deny"
panic_in_result_fn = "deny"
redundant_clone = "deny"
redundant_closure_for_method_calls = "deny"
redundant_pub_crate = "deny"
redundant_type_annotations = "deny"
renamed_function_params = "deny"
significant_drop_tightening = "deny"
single_match_else = "deny"
single_option_map = "deny"
too_long_first_doc_paragraph = "deny"
trait_duplication_in_bounds = "deny"
trivial_regex = "deny"
type_repetition_in_bounds = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_mut_passed = "deny"
use_self = "deny"
useless_let_if_seq = "deny"
verbose_file_reads = "deny"
